overflow erro fixed

--- a/Acuitus_Culsoltancy/src/assets/styles/landingPage/landing.scss
+++ b/Acuitus_Culsoltancy/src/assets/styles/landingPage/landing.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@400;500&family=Nunito+Sans:ital,wght@0,300;0,400;0,600;1,200;1,500&family=Passion+One&family=Playfair+Display&family=Poppins:wght@500&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Inter:wght@100&family=Montserrat:ital,wght@0,100;1,200&family=Poppins&display=swap');
 
+.land {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 body {
     font-family: 'Merriweather', serif;
     font-family: 'Montserrat', sans-serif;
